Added illness and vacation tasks reports. Refactored controller, client, service layers.